# snake

./: CMakeLists.txt  README.md  dialog.cpp  dialog.h  food.cpp  food.h  main.cpp  scene.cpp  scene.h  score.h  snake.cpp  snake.h  square.cpp  square.h  window.cpp  window.h
